update:ws支持以及录入题目功能
